--- a/app/src/main/res/navigation/navigation_update.xml
+++ b/app/src/main/res/navigation/navigation_update.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_update">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_update"
+    app:startDestination="@id/detailFragment">
 
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.lazday.todolist.fragment.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" >
+        <action
+            android:id="@+id/action_detailFragment_to_updateFragment"
+            app:destination="@id/updateFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/updateFragment"
+        android:name="com.lazday.todolist.fragment.UpdateFragment"
+        android:label="fragment_update"
+        tools:layout="@layout/fragment_update" />
 </navigation>
