--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             android:padding="10dp"
             >
             <FrameLayout
-                android:id="@+id/top"
+                android:id="@+id/custom_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -27,8 +27,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 >
                 <include
-                    android:id="@+id/header"
-                    layout="@layout/custom_header"
+                    android:id="@+id/custom"
+                    layout="@layout/custom_home"
                     />
             </FrameLayout>
             <TextView
@@ -41,7 +41,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/top"
+                app:layout_constraintTop_toBottomOf="@+id/custom_home"
                 tools:ignore="HardcodedText" />
             <TextView
                 android:id="@+id/text_all"
@@ -53,7 +53,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/blue_500"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/top"
+                app:layout_constraintTop_toBottomOf="@+id/custom_home"
                 tools:ignore="HardcodedText" />
             <TextView
                 android:visibility="gone"
