--- a/app/src/main/res/layout/adapter_task_completed.xml
+++ b/app/src/main/res/layout/adapter_task_completed.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="HardcodedText" />
         <TextView
-            android:id="@+id/text_time"
+            android:id="@+id/text_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
