--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.HomeFragment">
+    tools:context="com.kelompok2.nugazz.fragment.HomeFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="20dp"
-                android:backgroundTint="@color/blue_500"
+                android:backgroundTint="@color/red_500"
                 app:cardElevation="1dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -38,11 +38,11 @@
 
                     <ImageView
                         android:id="@+id/image"
-                        android:layout_width="75dp"
-                        android:layout_height="75dp"
-                        android:src="@drawable/ic_home"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/logo_nugazz"
                         android:adjustViewBounds="true"
-                        app:tint="@color/white"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:ignore="HardcodedText" />
@@ -51,9 +51,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Hari Ini, "
+                        android:text="Hari Ini"
                         android:textSize="24sp"
                         android:textColor="@color/white"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/image"
                         tools:ignore="HardcodedText" />
@@ -62,12 +63,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="15/2/2021"
+                        android:text="01/01/2021"
                         android:textSize="24sp"
                         android:textColor="@color/white"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@+id/label_today"
-                        app:layout_constraintTop_toBottomOf="@+id/image"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/label_today"
                         tools:ignore="HardcodedText" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -78,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:layout_marginStart="10dp"
-                android:text="Hari Ini"
+                android:text="Tugas Hari Ini"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +94,7 @@
                 android:layout_marginEnd="10dp"
                 android:text="Lihat Semua"
                 android:textSize="16sp"
-                android:textColor="@color/blue_500"
+                android:textColor="@color/red_500"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/card_header"
                 tools:ignore="HardcodedText" />
@@ -105,7 +107,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:padding="20dp"
-                android:text="Tidak ada tugas"
+                android:text="Tidak ada tugas hari ini :)"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +177,7 @@
         android:layout_margin="20dp"
         android:src="@drawable/ic_add"
         app:tint="@color/white"
-        android:backgroundTint="@color/blue_500"
+        android:backgroundTint="@color/red_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
