--- a/app/src/main/res/navigation/navigation_update.xml
+++ b/app/src/main/res/navigation/navigation_update.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.lazday.todolist.fragment.DetailFragment"
+        android:name="com.kelompok2.nugazz.fragment.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/updateFragment"
-        android:name="com.lazday.todolist.fragment.UpdateFragment"
+        android:name="com.kelompok2.nugazz.fragment.UpdateFragment"
         android:label="fragment_update"
         tools:layout="@layout/fragment_update" />
 </navigation>
