--- a/app/src/main/res/layout/activity_all.xml
+++ b/app/src/main/res/layout/activity_all.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AllActivity"
+    tools:context="com.kelompok2.nugazz.activity.AllActivity"
     >
 
     <androidx.fragment.app.FragmentContainerView
