--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.HomeActivity"
+    tools:context="com.kelompok2.nugazz.activity.HomeActivity"
     android:background="@color/white"
     >
     <androidx.fragment.app.FragmentContainerView
