--- a/app/src/main/res/layout/adapter_task_completed.xml
+++ b/app/src/main/res/layout/adapter_task_completed.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/strike_text"
+            tools:text="Proyek PSI"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/image_check"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            tools:text="1 April 2021"
+            tools:text="01/01/2001"
             android:textSize="10sp"
             app:drawableStartCompat="@drawable/ic_date_small"
             android:drawablePadding="3dp"
@@ -54,6 +54,18 @@
             app:layout_constraintTop_toBottomOf="@+id/text_task"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:ignore="HardcodedText,SmallSp" />
+        <TextView
+            android:id="@+id/text_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="6dp"
+            tools:text="23:59"
+            android:textSize="10sp"
+            app:layout_constraintStart_toEndOf="@+id/text_date"
+            app:layout_constraintTop_toBottomOf="@+id/text_task"
+            tools:ignore="SmallSp"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
