--- a/app/src/main/res/layout/fragment_all.xml
+++ b/app/src/main/res/layout/fragment_all.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.AllFragment">
+    tools:context="com.kelompok2.nugazz.fragment.AllFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:src="@drawable/ic_menu"
+                app:tint="@color/red_500"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -30,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:layout_marginStart="10dp"
-                android:text="Semua"
+                android:text="Semua Tugas"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +46,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:padding="20dp"
-                android:text="Tidak ada tugas"
+                android:text="Tidak ada tugas :)"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
