--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.UpdateFragment">
+    tools:context="com.kelompok2.nugazz.fragment.UpdateFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,48 +15,82 @@
             android:id="@+id/edit_task"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Tugas"
-            android:drawableStart="@drawable/ic_task"
+            android:hint="Masukkan Tugas"
             android:drawablePadding="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText"
+            />
         <TextView
             android:id="@+id/label_date"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:padding="5dp"
             android:text="Ubah Tanggal"
-            android:textColor="@color/blue_500"
+            android:textColor="@color/red_500"
+            android:textStyle="bold"
             app:drawableStartCompat="@drawable/ic_date"
             android:drawablePadding="5dp"
-            android:drawableTint="@color/blue_500"
+            android:drawableTint="@color/red_500"
+            android:gravity="start|center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_task"
+            tools:ignore="HardcodedText"
+            />
+        <TextView
+            android:id="@+id/label_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:text="Ubah Jam"
+            android:textColor="@color/red_500"
+            android:textStyle="bold"
+            app:drawableStartCompat="@drawable/ic_time"
+            android:drawablePadding="5dp"
+            android:drawableTint="@color/red_500"
+            android:gravity="start|center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/label_date"
+            tools:ignore="HardcodedText"
+            />
+        <TextView
+            android:id="@+id/text_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            tools:text="23:59"
+            android:gravity="start|center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/label_date"
+            app:layout_constraintBottom_toBottomOf="@+id/label_date"
             tools:ignore="HardcodedText"
             />
         <TextView
             android:id="@+id/text_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:padding="5dp"
-            tools:text="02/04/2021"
-            android:textColor="@color/black"
+            tools:text="01/01/2001"
+            android:gravity="start|center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_task"
+            app:layout_constraintTop_toTopOf="@+id/label_date"
+            app:layout_constraintEnd_toStartOf="@+id/text_time"
+            app:layout_constraintBottom_toBottomOf="@+id/label_date"
             tools:ignore="HardcodedText"
             />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_save"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginTop="20dp"
             android:text="Simpan Perubahan"
+            android:textAllCaps="false"
             app:cornerRadius="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_date"
+            app:layout_constraintTop_toBottomOf="@+id/label_time"
             tools:ignore="HardcodedText" />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_delete"
@@ -64,6 +98,7 @@
             android:layout_height="55dp"
             android:layout_marginTop="5dp"
             android:text="Hapus"
+            android:textAllCaps="false"
             android:textColor="@android:color/holo_red_light"
             app:cornerRadius="10dp"
             android:backgroundTint="@android:color/white"
