--- a/app/src/main/res/menu/menu_task.xml
+++ b/app/src/main/res/menu/menu_task.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_new"
-        android:title="Buat baru"
+        android:title="Tambah tugas baru"
         />
     <item
         android:id="@+id/action_delete"
-        android:title="Hapus selesai"
+        android:title="Hapus tugas selesai"
         />
     <item
         android:id="@+id/action_delete_all"
-        android:title="Hapus semua"
+        android:title="Hapus semua tugas"
         />
 </menu>
